--- a/code/FedGKT/FedGKT.ipynb
+++ b/code/FedGKT/FedGKT.ipynb
@@ -3931,11 +3931,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# Some Client's plot\n",
-        "#trainers[1].plot_loss_vs_rounds()\n",
-        "#trainers[2].plot_loss_vs_rounds()\n",
-        "#trainers[3].plot_loss_vs_rounds()\n",
-        "#trainers[4].plot_loss_vs_rounds()\n",
+        "# A subset of Client's plot\n",
+        "trainers[1].plot_loss_vs_rounds()\n",
+        "trainers[2].plot_loss_vs_rounds()\n",
+        "trainers[3].plot_loss_vs_rounds()\n",
+        "trainers[4].plot_loss_vs_rounds()\n",
         "# Server plots\n",
         "trainers[0].plot_train_loss_vs_rounds()\n",
         "trainers[0].plot_train_accuracy_vs_rounds()\n",
