--- a/code/GradientAttack/Breaching_notebook.ipynb
+++ b/code/GradientAttack/Breaching_notebook.ipynb
@@ -171,7 +171,7 @@
    "source": [
     "## Reconstruct user data\n",
     "\n",
-    "Now we launch the attack, reconstructing user data based on only the **server_payload** and **the shared_data**.\n",
+    "Now we launch the attack, reconstructing user data based on only the **server_payload** and **the shared_data**.\n"
    ]
   },
   {
